<resources>
    <string name="app_name">MovieApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="movie_image">Movie image</string>
    <string name="background_image">Background image</string>
    <string name="bookmark">Bookmark</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>
    <string name="overview">Overview</string>
    <string name="image_movie">Image movie</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="language_txt">Language %s</string>
    <string name="rating_txt">%s (%d Reviews)</string>
    <string name="release_txt">Released %s</string>
</resources>